# nuu-cast

./: .gitignore  LICENSE  README.md
nuucast/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
nuucast/src/: deleter.rs  explorer.rs  file_fetcher.rs  file_utility.rs  main.rs  uploader.rs
nuucast/src/html/: html_template.rs  mod.rs
nuucast/src/io/: file_lookup_cache.rs  file_utility.rs  mkv_utility.rs  mod.rs  subtitles_utility.rs
nuucast/static/: style.css
nuucast/static/js/: app.js  directories.js
