[package]
name="nuucast"
version="0.1.0"
description = "A media server called Nuucast."
edition="2024"
publish=false

[dependencies]
axum= { version="0.8.8", features = ["http2", "tokio"] }
tokio={ version = "1.49.0", features = ["full"] }
hyper="1.8.1"
tower-http = { version = "0.6.8", features = ["fs"] }
tokio-util = "0.7.18"
rsubs-lib = "0.3.3"